--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
+  <link rel="icon" type="image/x-icon" href="tkn.ico">
   <title>Lời chúc 20-11 — Lớp 11A16</title>
   <style>
     :root{
@@ -222,13 +223,13 @@
         <img id="teacherPhoto" alt="Thầy Huỳnh Công Phúc" src="thay-phuc.jpg">
         <div class="ribbon">Kính tặng Thầy</div>
         <div style="margin-top:12px;color:var(--muted);font-size:13px;text-align:center">
-          Thầy Huỳnh Công Phúc — Giáo viên bộ môn Hóa<br>Ngày Nhà giáo Việt Nam 20-11
+          Thầy Lê Hồng Hải — Giáo viên bộ môn Tin(MOS)<br>Ngày Nhà giáo Việt Nam 20-11
         </div>
       </div>
 
       <div class="content">
         <h1>Lời chúc 20-11 từ lớp A16 (2024-2027) 🎉</h1>
-        <p class="lead">Kính gửi thầy Huỳnh Công Phúc, lớp A16 xin gửi tới thầy đôi lời tri ân nhân dịp 20/11</p>
+        <p class="lead">Kính gửi thầy Lê Hồng Hải, lớp A16 xin gửi tới thầy đôi lời tri ân nhân dịp 20/11</p>
 
         <div class="message">
           <div class="text">
