--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
     <div class="card" role="main">
 
       <div class="photo">
-        <img id="teacherPhoto" alt="Thầy Lê Hồng Hải" src="Hai.png">
+        <img id="teacherPhoto" alt="Thầy Lê Hồng Hải" src="Hai.jpg">
         <div class="ribbon">Kính tặng Thầy</div>
         <div style="margin-top:12px;color:var(--muted);font-size:13px;text-align:center">
           Thầy Lê Hồng Hải — Giáo viên bộ môn Tin(MOS)<br>Ngày Nhà giáo Việt Nam 20-11
